[gd_scene load_steps=5 format=3 uid="uid://jef78uqqfacu"]

[ext_resource type="Theme" uid="uid://d1b4h4itqfdyx" path="res://themes/main.tres" id="1_ahxfr"]
[ext_resource type="Script" path="res://scripts/life.gd" id="2_uwmuu"]
[ext_resource type="PackedScene" uid="uid://cdpxj2mwr38iq" path="res://nodes/panel.tscn" id="3_lbdxp"]
[ext_resource type="PackedScene" uid="uid://dgx3gexldg4wu" path="res://nodes/item.tscn" id="4_do3nv"]

[node name="world" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ahxfr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="CurrentAge" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Edad actual"
vertical_alignment = 1

[node name="AgeLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Current Life Stage" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Etapa vital"
horizontal_alignment = 2
vertical_alignment = 1

[node name="StageLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Beb√©"
horizontal_alignment = 2
vertical_alignment = 1

[node name="life" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_uwmuu")
popup_event_node = ExtResource("3_lbdxp")
popup_item_node = ExtResource("4_do3nv")

[node name="Born" type="Button" parent="life"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -15.5
offset_right = 27.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
text = "Nacer"

[node name="YearTimer" type="Timer" parent="life"]
unique_name_in_owner = true

[connection signal="pressed" from="life/Born" to="life" method="start_life"]
[connection signal="pressed" from="life/Born" to="life/Born" method="queue_free"]
[connection signal="timeout" from="life/YearTimer" to="life" method="_on_year_timeout"]
